--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   flutter_easyloading: ^3.0.5
   image_picker_web: ^4.0.0
   pdf: ^3.10.8
+  barcode_widget: ^2.0.4
   cached_network_image: ^3.3.1
   simple_barcode_scanner: ^0.1.1
   path_provider: ^2.1.2
