--- a/web/firebase.json
+++ b/web/firebase.json
@@ -1,19 +1,16 @@
 {
-
   "hosting": {
-    "public": "build",
+    "public": "build/web",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
     ],
-    "rewrites": [{
-      "source": "**",
-      "destination": "/index.html"
-    }],
-    "headers": [{
-      "key": "Cache-Control",
-      "value": "max-age=0"
-    }]
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
   }
 }
