--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   google_fonts:
   flutter_feather_icons: ^2.0.0+1
   font_awesome_flutter: ^10.7.0
-  syncfusion_flutter_charts: ^26.1.40
+#  syncfusion_flutter_charts: ^26.1.40
   image_picker: ^1.0.7
   dotted_border: ^2.1.0
   flutter_simple_calculator:
